--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -10,13 +10,38 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        body > h1{
+            text-align: center;
+        }
+
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
+            margin: auto;
         }
+
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+            border-radius: 10px 10px 0px 0px;
+        }
+
         thead, tfoot{
-            background-color: gray;
+            background-color: rgb(78, 76, 76);
             color: white;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: rgb(78, 76, 76);;
+        }
+
+        tbody > tr:nth-child(odd){
+            background-color: lightgray;
         }
 
         td ,th{
@@ -33,6 +58,7 @@
     <h1>Uso de Tabelas Grandes</h1>
     <!--ANATOMIA TABELAS GRANDES
         TABLE
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -40,12 +66,12 @@
             TFOOT
                 TR, TD, TH
     -->
-
     <table>
+        <caption>População dos Estados Brasileiros</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
             </tr>
         </thead>
         <tbody>
@@ -159,10 +185,18 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>203 062 512</strong></td>
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nobis ipsa, sunt quidem animi debitis ex voluptatibus aliquid distinctio tenetur asperiores quaerat molestias beatae corrupti iure placeat quibusdam, suscipit commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus, perferendis dolor exercitationem suscipit eos illo asperiores delectus atque! Explicabo ea nobis consequuntur, recusandae blanditiis assumenda voluptas nesciunt asperiores? Cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatum reiciendis ipsa dolorem at temporibus, consectetur vero aspernatur autem. Accusamus, fuga maxime. Rem quos quis nam qui facilis pariatur harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, praesentium magni labore maiores odit corporis, excepturi non expedita iste accusantium distinctio sint rerum. Dicta accusamus doloremque nisi, saepe quaerat numquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nobis ipsa, sunt quidem animi debitis ex voluptatibus aliquid distinctio tenetur asperiores quaerat molestias beatae corrupti iure placeat quibusdam, suscipit commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus, perferendis dolor exercitationem suscipit eos illo asperiores delectus atque! Explicabo ea nobis consequuntur, recusandae blanditiis assumenda voluptas nesciunt asperiores? Cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatum reiciendis ipsa dolorem at temporibus, consectetur vero aspernatur autem. Accusamus, fuga maxime. Rem quos quis nam qui facilis pariatur harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, praesentium magni labore maiores odit corporis, excepturi non expedita iste accusantium distinctio sint rerum. Dicta accusamus doloremque nisi, saepe quaerat numquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nobis ipsa, sunt quidem animi debitis ex voluptatibus aliquid distinctio tenetur asperiores quaerat molestias beatae corrupti iure placeat quibusdam, suscipit commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus, perferendis dolor exercitationem suscipit eos illo asperiores delectus atque! Explicabo ea nobis consequuntur, recusandae blanditiis assumenda voluptas nesciunt asperiores? Cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatum reiciendis ipsa dolorem at temporibus, consectetur vero aspernatur autem. Accusamus, fuga maxime. Rem quos quis nam qui facilis pariatur harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, praesentium magni labore maiores odit corporis, excepturi non expedita iste accusantium distinctio sint rerum. Dicta accusamus doloremque nisi, saepe quaerat numquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nobis ipsa, sunt quidem animi debitis ex voluptatibus aliquid distinctio tenetur asperiores quaerat molestias beatae corrupti iure placeat quibusdam, suscipit commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus, perferendis dolor exercitationem suscipit eos illo asperiores delectus atque! Explicabo ea nobis consequuntur, recusandae blanditiis assumenda voluptas nesciunt asperiores? Cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatum reiciendis ipsa dolorem at temporibus, consectetur vero aspernatur autem. Accusamus, fuga maxime. Rem quos quis nam qui facilis pariatur harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, praesentium magni labore maiores odit corporis, excepturi non expedita iste accusantium distinctio sint rerum. Dicta accusamus doloremque nisi, saepe quaerat numquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nobis ipsa, sunt quidem animi debitis ex voluptatibus aliquid distinctio tenetur asperiores quaerat molestias beatae corrupti iure placeat quibusdam, suscipit commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus, perferendis dolor exercitationem suscipit eos illo asperiores delectus atque! Explicabo ea nobis consequuntur, recusandae blanditiis assumenda voluptas nesciunt asperiores? Cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatum reiciendis ipsa dolorem at temporibus, consectetur vero aspernatur autem. Accusamus, fuga maxime. Rem quos quis nam qui facilis pariatur harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, praesentium magni labore maiores odit corporis, excepturi non expedita iste accusantium distinctio sint rerum. Dicta accusamus doloremque nisi, saepe quaerat numquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nobis ipsa, sunt quidem animi debitis ex voluptatibus aliquid distinctio tenetur asperiores quaerat molestias beatae corrupti iure placeat quibusdam, suscipit commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus, perferendis dolor exercitationem suscipit eos illo asperiores delectus atque! Explicabo ea nobis consequuntur, recusandae blanditiis assumenda voluptas nesciunt asperiores? Cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatum reiciendis ipsa dolorem at temporibus, consectetur vero aspernatur autem. Accusamus, fuga maxime. Rem quos quis nam qui facilis pariatur harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, praesentium magni labore maiores odit corporis, excepturi non expedita iste accusantium distinctio sint rerum. Dicta accusamus doloremque nisi, saepe quaerat numquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nobis ipsa, sunt quidem animi debitis ex voluptatibus aliquid distinctio tenetur asperiores quaerat molestias beatae corrupti iure placeat quibusdam, suscipit commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus, perferendis dolor exercitationem suscipit eos illo asperiores delectus atque! Explicabo ea nobis consequuntur, recusandae blanditiis assumenda voluptas nesciunt asperiores? Cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatum reiciendis ipsa dolorem at temporibus, consectetur vero aspernatur autem. Accusamus, fuga maxime. Rem quos quis nam qui facilis pariatur harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, praesentium magni labore maiores odit corporis, excepturi non expedita iste accusantium distinctio sint rerum. Dicta accusamus doloremque nisi, saepe quaerat numquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nobis ipsa, sunt quidem animi debitis ex voluptatibus aliquid distinctio tenetur asperiores quaerat molestias beatae corrupti iure placeat quibusdam, suscipit commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus, perferendis dolor exercitationem suscipit eos illo asperiores delectus atque! Explicabo ea nobis consequuntur, recusandae blanditiis assumenda voluptas nesciunt asperiores? Cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatum reiciendis ipsa dolorem at temporibus, consectetur vero aspernatur autem. Accusamus, fuga maxime. Rem quos quis nam qui facilis pariatur harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, praesentium magni labore maiores odit corporis, excepturi non expedita iste accusantium distinctio sint rerum. Dicta accusamus doloremque nisi, saepe quaerat numquam?</p>
 </body>
 </html>
