--- a/desafios/d014/desafio01.html
+++ b/desafios/d014/desafio01.html
@@ -7,9 +7,11 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
         }
         table{
             border-collapse: collapse;
+            margin: auto;
         }
         th,td{
             border: 1px solid black;
@@ -20,13 +22,18 @@
             color: white;
             text-align: left;
         }
+        tr.media > td{
+            text-align: center;
+        }
         
     </style>
 </head>
 <body>
+    <h1>Capitulo 21</h1>
+    <h2>Desafio</h2>
     <table>
         <thead>
-            <th rowspan="2" scope="col">Área</th>
+            <th rowspan="2" scope="col" style="text-align: center;">Área</th>
             <th rowspan="2" scope="col">Diciplinas</th>
             <th colspan="2" style="text-align: center;" scope="colgroup">Notas</th>
             <th rowspan="2" scope="col">Media</th>
