--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -58,7 +58,7 @@
             <td>25</td>
             <td>Jornalista</td>
             <tr>
-                <td>Cladio</td>
+                <td>Claudio</td>
                 <td>M</td>
                 <td>28</td>
                 <td>Programador</td>
