--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -18,7 +18,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat adipisci eum ipsa sint neque laboriosam ducimus explicabo veniam tenetur. Expedita aliquam quos repellat atque! Nulla cum pariatur excepturi corrupti? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente numquam exercitationem dolore culpa iusto quaerat velit temporibus nesciunt minus similique, unde dolores? Minus qui id, nemo eaque sunt dolor modi.</p>
 
-    <iframe src="pag001.html" frameborder="0" width="500px" height="400px">
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="500px" height="400px">
         <p>Infelizmente seu navegador nao é compativel</p>
     </iframe>
 
