--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -18,15 +18,15 @@
         </p>
         <p>
             <label for="imes">Periodo Letivo: </label>
-            <input type="month" name="mes" id="imes">
+            <input type="month" name="mes" id="imes" required>
         </p>
         <p>
             <label for="idia">Dia da Prova: </label>
-            <input type="date" name="dia" id="idia">
+            <input type="date" name="dia" id="idia" required>
         </p>
         <p>
             <label for="ihora">Hora: </label>
-            <input type="time" name="hora" id="ihora">
+            <input type="time" name="hora" id="ihora" required>
         </p>
         <p>
             <input type="submit" value="Enviar">
